welcome.lessons.welcome.array.array123.Array123.scala.error
array123:5: error: type mismatch;
 found   : Unit
 required: Boolean
  if ((ya1) && (ya2) && (ya3)) {return true}
  ^